Auto-always/never can at most triggered twice (new translate infobar)

Currently, in the new translate infobar,
"Always translate" will be triggered automatically when a language
is consecutively translated for 5 times. And user can click on "Cancel"
to undo the "Always translate".

However, it is quite annoying that the auto-always will keep triggering
again and again for every 5 translations.

After discussion, we should limit the maximum number of auto-always to
2 times.

Same for auto-never.

BUG=728931

Review-Url: https://codereview.chromium.org/2920953002
Cr-Commit-Position: refs/heads/master@{#479226}

Former-commit-id: fb6d187db2e842f01db923c87d7958b52175c37f